[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/overlays/victory_card.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scenes/scale_to_parent_text.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/card.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/body.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/generic_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/licensed/sfx/menu exit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/licensed/sfx/card grab.wav" type="AudioStream" id=8]

[node name="control" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_right = -427.0
margin_bottom = 114.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 2 )
text = "victory_title"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint" type="Label" parent="."]
anchor_right = 1.0
margin_top = 152.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 5 )
text = "victory_pick_cards"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choices_left" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_top = 480.0
margin_right = 288.0
margin_bottom = 560.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "victory_choices_left"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cards" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -128.0
margin_right = -80.0
margin_bottom = -128.0

[node name="card" parent="cards" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 151.0
margin_bottom = 236.0

[node name="button_close" parent="." instance=ExtResource( 6 )]
margin_left = -120.0
margin_top = 208.0
margin_right = 115.0
margin_bottom = 288.0
click_sound = ExtResource( 7 )

[node name="label" parent="button_close" instance=ExtResource( 3 )]
margin_left = -162.0
margin_right = 167.0
text = "menu_continue"

[node name="sound_card" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="button_close" to="." method="button_pressed"]
